--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <link rel = "stylesheet" href="Novo Projeto 353 [DCB53E1].png">
 
-<img = src="Novo Projeto 353 [DCB53E1].png" width="100px" height="100px" >
+<img src="Novo Projeto 353 [DCB53E1].png" width="100px" height="100px" >
+<img src="ba2f387ecc9609d22a776207e03d6615.jpg" width="100px" height="100px" >
+<img src="5155b2980faef49df8e65b60d361e803.jpg" width="100px" height="100px" >
